--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="googleproject.css">
+    <script src="https://kit.fontawesome.com/1e67d5e030.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
+    <div class="about">About</div>
     <div class="logo">
         <img class="googlelogo" src="img/googlelogo.png" alt="google logo">
     </div>
+    <div class="searchcontainer">
+        <span class="glass"> 
+            <i class="fas fa-search"></i>
+        </span>
+        <span>
+            <input class="searchinput" type="text">
+        </span>
+        <span class="microphone">
+            <i class="fas fa-microphone"></i>
+        </span>
+    </div>
+    <div class="buttons">Buttons</div>
         
 </body>
 </html>
