--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="about">About</div>
     <div class="logo">
         <img class="googlelogo" src="img/googlelogo.png" alt="google logo">
     </div>
-    <div class="searchcontainer">
+    <span class="searchcontainer">
         <span class="glass"> 
             <i class="fas fa-search"></i>
         </span>
@@ -24,8 +23,9 @@
         <span class="microphone">
             <i class="fas fa-microphone"></i>
         </span>
+    </span>
+    <div class="footer">
+        <p>footer</p>
     </div>
-    <div class="buttons">Buttons</div>
-        
 </body>
 </html>
