push for recovery

--- a/index.html
+++ b/index.html
@@ -11,21 +11,30 @@
 </head>
 <body>
     <div class="logo">
-        <img class="googlelogo" src="img/googlelogo.png" alt="google logo">
+        <img class="googleLogo" src="img/googlelogo.png" alt="google logo">
     </div>
-    <span class="searchcontainer">
+    <span class="searchContainer">
         <span class="glass"> 
             <i class="fas fa-search"></i>
         </span>
         <span>
-            <input class="searchinput" type="text">
+            <input class="searchInput" type="text">
         </span>
         <span class="microphone">
             <i class="fas fa-microphone"></i>
         </span>
     </span>
-    <div class="footer">
-        <p>footer</p>
-    </div>
+    <footer class="container footer">
+        <span class= "container left">
+                <a class="link" href="#">Advertising</a>
+                <a class="link" href="#">Business</a>
+                <a class="link" href="#">How Search works</a>
+        </span>
+        <span class="container right">
+                <a class="link" href="#">Privacy</a>
+                <a class="link" href="#">Terms</a>
+                <a class="link" href="#">Settings</a>
+        </span>
+    </footer>
 </body>
 </html>
